# FORECAST_ML

./: .dockerignore  .gitignore  README.md  dockerfile  mlflow.db  pyproject.toml
ml-forecasting-service/: function_app.py  mlflow.db  pyproject.toml  pytest.py  requirements.txt  run_analysis.py
ml-forecasting-service/api/: main.py
ml-forecasting-service/data_ingestion/: __init__.py  fetch_data.py  ingest_opsd_load.py
ml-forecasting-service/data_ingestion/extras/elexon_recent/: ingest_elexon_recent.py
ml-forecasting-service/docker/: dockerfile
ml-forecasting-service/features/: __init__.py  build_dataset.py  merge_datasets.py
ml-forecasting-service/guide/: ANALYSIS_GUIDE.md
ml-forecasting-service/inference/: predict.py
ml-forecasting-service/models/: xgb_power_h24.joblib
ml-forecasting-service/monitoring/: store.py
ml-forecasting-service/scripts/: call_predict.py  create_json_predict.py  run_docker.ps1
ml-forecasting-service/scripts/json/: payload_500.json
ml-forecasting-service/tests/: mlflow.db  test_api.py
ml-forecasting-service/training/: __init__.py  analyze_model.py  baseline.py  test_horizons.py  train.py  utils.py
