[project]
name = "ml-forecasting-service"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "polars>=0.20",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "xgboost>=2.0",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.0",
  "joblib>=1.3",
  "mlflow>=2.10",
  "pytest>=8.0",
  "python-dotenv>=1.0",
  "requests>=2.31"
]